--- a/hw_2/hw.ipynb
+++ b/hw_2/hw.ipynb
@@ -9,8 +9,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-20T21:09:00.545307Z",
-     "start_time": "2024-05-20T21:09:00.246659Z"
+     "end_time": "2024-05-20T21:28:51.306309Z",
+     "start_time": "2024-05-20T21:28:50.954629Z"
     }
    },
    "cell_type": "code",
@@ -28,8 +28,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-20T21:09:02.061005Z",
-     "start_time": "2024-05-20T21:09:00.659194Z"
+     "end_time": "2024-05-20T21:28:56.210090Z",
+     "start_time": "2024-05-20T21:28:54.735528Z"
     }
    },
    "cell_type": "code",
@@ -43,7 +43,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fcdccca5950>"
+       "<matplotlib.image.AxesImage at 0x7eff71106ad0>"
       ]
      },
      "execution_count": 2,
@@ -72,8 +72,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-20T21:09:07.437007Z",
-     "start_time": "2024-05-20T21:09:04.758995Z"
+     "end_time": "2024-05-20T21:29:00.764798Z",
+     "start_time": "2024-05-20T21:28:57.865686Z"
     }
    },
    "cell_type": "code",
@@ -99,7 +99,7 @@
     {
      "data": {
       "text/plain": [
-       "(<Axes: >, <matplotlib.image.AxesImage at 0x7fcda06042d0>)"
+       "(<Axes: >, <matplotlib.image.AxesImage at 0x7eff6cfd2e90>)"
       ]
      },
      "execution_count": 3,
