homework 4 small fix

--- a/hw_4/hw.ipynb
+++ b/hw_4/hw.ipynb
@@ -287,7 +287,7 @@
    "source": [
     "#### Do you see anything strange in the final result?\n",
     "\n",
-    "To be honest, no, except that it was necessary to add the n_init parameter to KMeans"
+    "Honestly, no, except that the lines on the left side of the road don't exactly follow the road marking lines"
    ],
    "id": "be0477d084912f45"
   },
