--- a/hw_8/hw.ipynb
+++ b/hw_8/hw.ipynb
@@ -66,8 +66,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-17T20:19:30.757211Z",
-     "start_time": "2024-06-17T20:19:30.412574Z"
+     "end_time": "2024-06-20T19:39:22.479066Z",
+     "start_time": "2024-06-20T19:39:21.942773Z"
     }
    },
    "cell_type": "code",
@@ -90,7 +90,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 11
+   "execution_count": 14
   },
   {
    "metadata": {},
@@ -197,11 +197,42 @@
   },
   {
    "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
+   "cell_type": "markdown",
+   "source": "#### Questions",
+   "id": "59a5be65624a5a0d"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "##### Looking at the computed histogram, could it be considered bimodal?\n",
+    "- Not really, because we have three distinct peaks"
+   ],
+   "id": "9e1cbd628bf2c465"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "##### Looking at the computed histogram, what binarization threshold would you chose? Why?\n",
+    "- Approximately between 150 and 180 - between two peaks in the middle. Because the last two peaks (on the right side clearly refer to the newspaper itself, which also has contrasting colors)"
+   ],
+   "id": "a94a9f2ec27234d4"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "###### Looking at the resulting (thresholded) image, is the text binarization (detection) good?\n",
+    "- In general, yes, despite some small noise"
+   ],
+   "id": "feb03b29f30aea21"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
    "source": "",
-   "id": "8b903e4a85205cc6"
+   "id": "630c8bfb2f7a2031"
   }
  ],
  "metadata": {
