--- a/hw_12/hw.ipynb
+++ b/hw_12/hw.ipynb
@@ -577,7 +577,7 @@
    "id": "c83a5c53-e07c-4570-b7fd-7e7afa0ab4a2",
    "metadata": {},
    "source": [
-    "##### Maximum accuracy that I can achieve while I'm playng with network was - 0.976062639821029"
+    "##### The maximum accuracy I could achieve while playing with the network was 0.976062639821029"
    ]
   }
  ],
